[gd_scene load_steps=2 format=3 uid="uid://gumop7him0p0"]

[ext_resource type="Script" path="res://ui/lobby.gd" id="1_21k40"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21k40")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.168627, 0.258824, 1)

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
offset_left = 48.0
offset_top = 40.0
offset_right = 198.0
offset_bottom = 93.0
focus_next = NodePath("../Ready")
focus_previous = NodePath(".")
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="Ready" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -93.0
offset_right = 198.0
offset_bottom = -40.0
grow_vertical = 0
focus_next = NodePath(".")
focus_previous = NodePath("../Back")
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Ready"

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -252.0
offset_right = 360.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 11

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Ready" to="." method="_on_ready_toggled"]
